# RTOS

./: CMakeLists.txt  README.md
docs/: architecture.mmd
src/diagnostics/app/: diagnostics_cli.cpp
src/diagnostics/include/diagnostics/: fault_manager.h  health_monitor.h  watchdog.h
src/diagnostics/src/: fault_manager.cpp  health_monitor.cpp  watchdog.cpp
src/hal/app/: hal_polling.cpp
src/hal/include/hal/: can_bus.h  i2c_bus.h  linux_can.h  linux_i2c.h  linux_spi.h  qnx_resource_manager.h  spi_bus.h
src/hal/src/: can_bus.cpp  i2c_bus.cpp  linux_can.cpp  linux_i2c.cpp  linux_spi.cpp  qnx_resource_manager.cpp  spi_bus.cpp
src/ipc/include/ipc/: binary_serializer.h  ipc_bus.h  ipc_message.h  ipc_serializer.h  ipc_transport.h  local_transport.h  protobuf_serializer.h  shm_transport.h  tcp_transport.h  unix_transport.h
src/ipc/proto/: README.md  ipc_envelope.proto
src/ipc/src/: binary_serializer.cpp  ipc_bus.cpp  local_transport.cpp  protobuf_serializer.cpp  shm_transport.cpp  tcp_transport.cpp  unix_transport.cpp
src/ipc/test/: ipc_bus_test.cpp  shm_transport_test.cpp
src/robotics/app/: robot_control_demo.cpp
src/robotics/include/robotics/: control_loop.h  sensor_fusion.h
src/robotics/src/: control_loop.cpp  sensor_fusion.cpp
src/rt/app/: rt_pipeline_demo.cpp
src/rt/include/rt/: rt_pipeline.h  rt_queue.h  rt_scheduler.h
src/rt/src/: rt_scheduler.cpp
src/rt/test/: rt_qnx_test.cpp
src/security/include/security/: crypto_provider.h  kms_client.h  mock_crypto_provider.h  secure_boot.h
src/security/src/: kms_client.cpp  mock_crypto_provider.cpp  secure_boot.cpp
